Fix leader popover clipping

--- a/src/domains/player/components/composition/PlayerCardMobile.module.css
+++ b/src/domains/player/components/composition/PlayerCardMobile.module.css
@@ -30,7 +30,7 @@
 
 .leadersSection {
   width: 170px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .techSection {
